# vep-mcps

./: .gitignore  CHANGELOG.md  LICENSE (MIT)  Makefile  README.md  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: test.yaml
parser-mcp/: Dockerfile  pyproject.toml  requirements.txt
parser-mcp/src/vep_parser_mcp/cli/: filter_consequence_and_mane.py  merge_gnomad_constraint.py  normalise_columns.py  overview.py  parsing_overview.py  prepare_pipeline.py
parser-mcp/src/vep_parser_mcp/io/: gz.py
runner-mcp/: Dockerfile  pyproject.toml
runner-mcp/src/vep_runner_mcp/cli/: run.py  vep_runner.py
runner-mcp/tests/: test_cli.py
schemas/: ANNOTATION_NORMALISED.schema.json  GNOMAD_CONSTRAINT.schema.json  VEP_RAW.schema.json
tests/: test_filter.py  test_merge.py  test_normalise.py  test_parser_cli.py
tests/data/: tiny.constraint.tsv  tiny.vep  tiny.vep.tsv
