[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "vep-parser-mcp"
version = "0.1.0"
description = "Agent-friendly VEP parsing MCP tools with strict I/O contracts"
readme = "README.md"
authors = [{ name = "Saleh Shekari" }]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2.2,<3",
  "typer>=0.12.3",
  "rich>=13.7.1",
  "jsonschema>=4.22.0"
]

[project.scripts]
vep-parsing-overview = "vep_parser_mcp.cli.parsing_overview:app"
vep-filter-consequence-mane = "vep_parser_mcp.cli.filter_consequence_and_mane:app"
vep-normalise-columns = "vep_parser_mcp.cli.normalise_columns:app"
vep-merge-gnomad-constraint = "vep_parser_mcp.cli.merge_gnomad_constraint:app"

[tool.hatch.build.targets.wheel]
packages = ["src/vep_parser_mcp"]
