[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "vep-runner-mcp"
version = "0.0.1"
description = "Thin CLI wrapper around Ensembl VEP inside Docker"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["typer>=0.9,<1", "rich>=13,<14"]

[project.scripts]
vep-runner = "vep_runner_mcp.cli.vep_runner:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/vep_runner_mcp"]